--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <div class="caixa-principal">
-        <h1>Vocẽ decide o seu futuro</h1>
+        <h1>Você decide o futuro da IA</h1>
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
         <div class="caixa-resultado">
             <p class="texto-resultado"></p>
         </div>
-        </div>
-  <script src=""></script>  
+    </div>
+<script src="script.js"></script>
 </body>
 </html>
